# Secure-Simulated-Data-Sharing

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  cloud_server.py  data_user.py  docker-compose.yml  edge_server.py  inject_data.py  pyproject.toml  requirements.txt  start_demo.sh  terminal.py  tpa.py
.github/workflows/: ci.yml
data/: cloud_registry.json  terminal_key.key
data/encrypted/: block_20250606_104723.json
data/signed/: block_20250606_104723.json
docs/: API.md  ARCHITECTURE.md  SECURITY.md
src/: simulation_runner.py
src/cloud/: api.py  main.py
src/common/: abe_engine.py  bls_engine.py  crypto.py
src/edge/: api.py  main.py
src/frontend/: index.html
src/secure_data_sharing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/terminal/: main.py
src/tpa/: api.py  main.py
tests/: test_api_flow.py  test_crypto.py
